[gd_scene load_steps=7 format=3 uid="uid://b7pmmbto7a4qo"]

[ext_resource type="Script" path="res://scripts/TrafficLights.gd" id="1_8qt4o"]
[ext_resource type="Texture2D" uid="uid://djptpkfqy3e4u" path="res://assets/lights/back.png" id="1_n56hn"]
[ext_resource type="Texture2D" uid="uid://wtrp311ocknb" path="res://assets/lights/front-green1.png" id="2_3vf4t"]
[ext_resource type="Texture2D" uid="uid://0osmwsyibcm0" path="res://assets/lights/front-green2.png" id="3_s8n1c"]
[ext_resource type="Texture2D" uid="uid://dikfs2g8iutht" path="res://assets/lights/front-yellow.png" id="5_5gles"]

[sub_resource type="GDScript" id="GDScript_3wtro"]
script/source = "extends Area2D


func get_traffic_lights():
	return $\"..\"
"

[node name="TrafficLights" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_8qt4o")
yellow_duration = 2
metadata/test_scene = "res://scenes/cars_test_scene.tscn"

[node name="Back" type="Sprite2D" parent="."]
texture = ExtResource("1_n56hn")
offset = Vector2(0, -64)

[node name="Front1" type="Sprite2D" parent="."]
position = Vector2(0, 64)
texture = ExtResource("2_3vf4t")
offset = Vector2(0, -128)

[node name="Front2" type="Sprite2D" parent="."]
position = Vector2(-1, 65)
texture = ExtResource("3_s8n1c")
offset = Vector2(0, -128)

[node name="FrontYellow" type="Sprite2D" parent="."]
position = Vector2(-1, 65)
texture = ExtResource("5_5gles")
offset = Vector2(0, -128)

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="LightsCollisionArea2D" type="Area2D" parent="."]
script = SubResource("GDScript_3wtro")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LightsCollisionArea2D" groups=["TrafficLightsGroup"]]
polygon = PackedVector2Array(2, -70, -133, 1, -1, 70, 138, 0)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
